# mlops-from-scratch

./: .gitignore  Dockerfile  README.md  dvc.yaml  main.py  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
data/: .gitignore  pollution.csv.dvc
mlruns/1/models/m-5306e39546404c6480a1327ad6138c5a/artifacts/: MLmodel  conda.yaml
mlruns/2/models/m-56aa9ff9836a4338964e898c8737ca73/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/2/models/m-86c17515e8d043bcb1278614a9c8bc8e/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/2/models/m-9656f80b12d845678ecfa35e77e4c26c/artifacts/: MLmodel
notebooks/: 01-eda-and-baseline.ipynb  02-eda-and-baseline.ipynb.ipynb
src/api/: main.py
src/data/: preprocess.py
src/models/: train.py
tests/: test_preprocess.py
